app/assets/stylesheets/pages.scss
/*nav bar attempt*/

* {
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
}

p {
  font-family: sans-serif;
}

h3 {
  font-family: sans-serif;
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #f9f9f9;
    border: 1px solid black;

}


h5 {
  text-align: center;
  font-family: sans-serif;
}

p {
  padding: 1rem;
  margin: 0rem;
}

.result-page {
  background: url('https://unsplash.it/2000/3000');
  background-repeat: no-repeat;

}

.my_image {
  display: block;
  margin: auto;
}

li {
    float: left;
}

li a {
    display: block;
    color: black;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

a:hover {
    background-color: #111;
}

.none {
  display: none;
}

.nav {
  text-align: center
}

.main-area {
  position: relative;
  margin-top: auto;
  // background-color: #5bbc2e;
  color: white;
  text-align: center;
  /*background: url("/assets/background-image.jpg");
  background-size: 1017px 632px;
  background-repeat: no-repeat;*/

  background: url('https://unsplash.it/2000/3000
');
  height: 100vh;
  margin-bottom: 2rem;

}

.inside-green {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}


.description-area {
  margin-top: 20px;
}

.find-tech-talent-button {
  color: white;
  // background-color: #5bbc2e;
  border-color: white;

}

.find-tech-talent-button:hover {
  color: black;
  background-color: white;
}

h5.main-area {
  color: white;
}

.how-it-works {
  text-align: center;
}

.testimonial-area {
  background-color: #f9f9f9;
  margin-left: 5rem;
margin-right: 5rem;
margin-top: 3rem;
margin-bottom: 3rem;

}

.top-businesses-area {
  text-align: center;
}

.main-area-2 {
  text-align: center;
  background-color: #5bbc2e;
  color: white;
  background: url('https://unsplash.it/2000/3000
');
}

.lowest-text {
  text-align: center;
  background-color: #f9f9f9;
  margin-top: 12.5rem;
}

.columns {
  margin-left: 0;
  padding: 10px;
  text-align: center;
}

.your-ideal-candidate {
  margin-bottom: 2rem;
}

.thank-you {
  margin-bottom: 2rem;
}

.grey-background {
background-color: #f9f9f9;
}

.white-background {
  background-color: white;
}

.rhys-button {
  display: block;
  margin: auto;
  margin-bottom: 2rem;

}

.last-day {
  margin-bottom: 2rem;
}

.warning {

}

.testimonial-text {
  border: 1px solid black;
  margin-bottom: 3rem;
}

.no1-recruitment {

}

.header-text {
  margin-bottom: 0rem;
}

.panel {
  border-right: 1px dotted black;
}

